[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "openflex"
version = "0.1.0"
authors = [
    {name = "Greg Stitt"},
    {name = "Wesley Piard"},
]
description = "**F**ramework for **L**ogic Synthesis and **EX**ploration"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["rtl", "hdl", "fpga"]
dependencies = [
    "pyyaml>=6",
    "click>=8",
]

[project.scripts]
openflex = "openflex.__main__:run"

[tool.setuptools]
packages = ["openflex"]

[tool.black]
line-length = 100

